# folder_locker

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  error.rs  file_manager.rs  folder_operations.rs  main.rs  metadata.rs  password.rs  permission_manager.rs  utils.rs
