[package]
name = "folder_locker"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
env_logger = "0.11.5"
log = "0.4.22"
native-windows-gui = "1.0.13"
thiserror = "1.0.64"
winapi = { version = "0.3.9", features = [
    "fileapi",
    "winnt",
    "errhandlingapi",
] }
windows-acl = "0.3.0"
windows-sys = { version = "0.59.0", features = ["Win32_Security"] }
